tests/ui/fail-unknown-attr.stderr
error: unexpected end of input, unknown attribute
 --> $DIR/fail-unknown-attr.rs:1:1
  |
1 | #[lazylink::lazylink(aaa="bbb")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
